--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '2.18.1'
 services:
   server:
-    build: ./server
+    build: .
     container_name: event-app_c
     ports:
       - '8000:8000'
